<resources>
    <string name="app_name">EcoCycle</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="insira_as_suas_credenciais_de_login">Insira as suas credenciais de login!</string>
    <string name="bem_vindo">Bem Vindo!</string>
    <string name="digite_o_seu_e_mail">Digite o seu e-mail</string>
    <string name="informe_a_sua_senha">Informe a sua senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="criar_sua_conta">Criar sua conta</string>
    <string name="criar">Criar</string>
    <string name="informe_as_suas_credenciais_de_login">Informe as suas credenciais de login.</string>
    <string name="informe_o_seu_nome">Informe o seu nome</string>
    <string name="ola">Ola</string>
    <string name="Cadastro_de_Cooperativa">Cadastro de Cooperativa</string>
    <string name="Nome">Nome</string>
    <string name="Digite_o_nome_da_Cooperativa">Digite o nome da Cooperativa</string>
    <string name="Digite_o_endereco_da_Cooperativa">Digite o endereço da Cooperativa</string>
    <string name="Endereco">Endereço</string>
    <string name="tipo_de_material_reciclavel">Tipo de material reciclavél</string>
    <string name="salvar">Salvar</string>
    <string name="nova_cooperativa">Nova Cooperativa</string>
    <string name="listar_cooperativa">Listar Cooperativas</string>
    <string name="local_icon">Icone</string>
    <string name="local_name">Nome do Local</string>
    <string name="local_address">Endereço do Local</string>

</resources>