<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".FormCadastroLocal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cadastro_de_Cooperativa"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nome"
            android:textSize="16sp"
            android:paddingBottom="8dp" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Digite_o_nome_da_Cooperativa"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Endereco"
            android:textSize="16sp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <EditText
            android:id="@+id/editTextEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Digite_o_endereco_da_Cooperativa"
            android:inputType="textPostalAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_de_material_reciclavel"
            android:textSize="16sp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <Spinner
            android:id="@+id/spinnerMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonCadastroLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary_green"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
