<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:padding="10dp">
    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/local_icon"
        android:layout_marginEnd="15dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_name"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/textView_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_address"
            android:textSize="14sp"
            android:textColor="@color/grey"/>
    </LinearLayout>
</LinearLayout>